fixed spacing and other changers

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -66,6 +66,10 @@ h3{
   font-family: 'Dancing Script', cursive;
 }
 
+#message_form{
+	margin-top: 30px;
+}
+
 .navbar{
   z-index: 5;
   margin-bottom: 0px !important;
